--- a/tienda/templates/tienda/lista_productos.html
+++ b/tienda/templates/tienda/lista_productos.html
@@ -7,8 +7,52 @@
             <h3>{{ producto.nombre }}</h3>
             <p>{{ producto.descripcion }}</p>
             <p>Precio: ${{ producto.precio }}</p>
+            <button onclick="agregarAlCarrito({{ producto.id }}, '{{ producto.nombre|escapejs }}', {{ producto.precio }})">
+                Agregar al carrito
+            </button>
         </li>
         {% endfor %}
     </ul>
+    <h2>🛒 Carrito de Compras</h2>
+    <ul id="carrito-lista"></ul>
+    <p>Total: $<span id="total">0</span></p>
+    <script>
+        let carrito = JSON.parse(localStorage.getItem('carrito')) || []
+        actualizarCarrito()
+    
+        function agregarAlCarrito(id, nombre, precio) {
+            const productoExistente = carrito.find(item => item.id === id)
+            if (productoExistente) {
+                productoExistente.cantidad += 1
+            } else {
+                carrito.push({id, nombre, precio, cantidad: 1})
+            }
+            localStorage.setItem('carrito', JSON.stringify(carrito))
+            actualizarCarrito()
+        }
+    
+        function actualizarCarrito() {
+            const lista = document.getElementById('carrito-lista')
+            const totalElemento = document.getElementById('total')
+            lista.innerHTML = ''
+            let total = 0
+    
+            carrito.forEach(item => {
+                const li = document.createElement('li')
+                li.innerText = `${item.nombre} x${item.cantidad} - $${(item.precio * item.cantidad).toFixed(2)}`
+                lista.appendChild(li)
+                total += item.precio * item.cantidad
+            })
+    
+            totalElemento.innerText = total.toFixed(2)
+        }
+    </script>
+    <button onclick="vaciarCarrito()">Vaciar carrito</button>
+    <script>
+        function vaciarCarrito() {
+            carrito = []
+            localStorage.removeItem('carrito')
+            actualizarCarrito()
+        }
+    </script>
 {% endblock %}
-
