--- a/tienda/templates/tienda/inicio.html
+++ b/tienda/templates/tienda/inicio.html
@@ -56,7 +56,7 @@
                     <li><a href="#">Plomería</a></li>
                     <li><a href="#">Construcción</a></li>
                     <li><a href="#">Ofertas</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="{% url 'contacto' %}">Contacto</a></li>
                 </ul>
             </nav>
         </div>
